new file:   images/navbar/home-unselected.png 	new file:   images/pfp/areeha.jpg 	new file:   images/pfp/atika.jpg 	new file:   images/pfp/catalina.jpg 	new file:   images/pfp/catalina1.jpg 	new file:   images/pfp/dahlia.jpg 	new file:   images/pfp/danae.jpg 	new file:   images/pfp/linh.jpg 	new file:   images/pfp/louka.jpg 	new file:   images/pfp/neila.jpg 	new file:   images/pfp/pepe.jpg     new file:   images/pfp/rima.jpg 	new file:   images/pfp/rodela.jpg 	new file:   images/pfp/triya.jpg 	new file:   images/pfp/zarah.jpg 	new file:   images/story/areeha.png 	new file:   images/story/atika.png 	new file:   images/story/catalina.png 	new file:   images/story/dahlia.png 	new file:   images/story/louka.png 	new file:   images/story/neila.png 	new file:   images/story/pepe.png 	new file:   images/story/rima.png 	new file:   images/story/rodela.png 	new file:   images/story/template.clip 	modified:   index.html 	modified:   messages.html 	modified:   profile.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
     <section class="main-content">
         <div class="stories">
-            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user0</p></div>
-            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user8</p></div>
-            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user99</p></div>
-            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user12</p></div>
-            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user11</p></div>
-            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user56</p></div>
-            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user23</p></div>
+            <div class="story"><img src="images/story/rodela.png"></div><div class="story-user"><p>rodela</p></div>
+            <div class="story"><img src="images/story/catalina.png"></div><div class="story-user"><p>user28</p></div>
+            <div class="story"><img src="images/story/pepe.png"></div><div class="story-user"><p>user99</p></div>
+            <div class="story"><img src="images/story/rima.png"></div><div class="story-user"><p>user12</p></div>
+            <div class="story"><img src="images/story/neila.png"></div><div class="story-user"><p>user11</p></div>
+            <div class="story"><img src="images/story/dahlia.png"></div><div class="story-user"><p>user56</p></div>
+            <div class="story"><img src="images/story/atika.png"></div><div class="story-user"><p>user23</p></div>
             <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user55</p></div>
             <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user67</p></div>
             <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user22</p></div>
