new file:   explore.html 	new file:   images/messenger.png 	modified:   index.html 	modified:   messages.html 	new file:   modal.js 	modified:   style.css

--- a/messages.html
+++ b/messages.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/fontawesome.min.css">
     <script src="https://kit.fontawesome.com/27bc711d28.js" crossorigin="anonymous"></script>
 </head>
+
+<!--TIME TOOK: around 4 hrs-->
+
 <body>
     <section class="side-bar-l-min">
 
@@ -57,18 +60,29 @@
                 <div class="inbox-row"><img src="images/pfp/rodela.jpg"><div class="inbox-sent"><h3>r</h3> <p>scrumptious · 14m</p></div></div>
                 <div class="inbox-row"><img src="images/pfp/areeha.jpg"><div class="inbox-sent"><h3>Areeha</h3> <p>tabanouche · 1h</p></div></div>
                 <div class="inbox-row"><img src="images/pfp/atika.jpg"><div class="inbox-sent"><h3>atika</h3> <p>WHAT???!! · 2h</p></div> </div>
-                <div class="inbox-row"><img src="images/pfp/louka.jpg"><div class="inbox-sent"><h3>Louka</h3> <p>Ok dabord · 2h</p></div> </div>
-                <div class="inbox-row"><img src="images/pfp/rima.jpg"><div class="inbox-sent"><h3>Azur Flamme</h3> <p>thank you :3 · 3h</p> </div></div>
-                <div class="inbox-row"><img src="images/pfp/catalina1.jpg"><div class="inbox-sent"><h3>catalina</h3> <p>u r so pretty · 6h</p></div> </div>
+                <div class="inbox-row"><img src="images/pfp/louka.jpg"><div class="inbox-sent"><h3>Louka</h3> <p><span>Urmom</span> · 2h</p></div><i class="fa-solid fa-circle"></i></div>
+                <div class="inbox-row"><img src="images/pfp/rima.jpg"><div class="inbox-sent"><h3>Azur Flamme</h3> <p><span>thank you :3</span> · 3h</p> </div><i class="fa-solid fa-circle"></i></div>
+                <div class="inbox-row"><img src="images/pfp/catalina1.jpg"><div class="inbox-sent"><h3>catalina</h3> <p><span>u r so pretty</span> · 6h</p></div> <i class="fa-solid fa-circle"></i></div>
                 <div class="inbox-row"><img src="images/pfp/pepe.jpg"><div class="inbox-sent"><h3>penelope</h3> <p>ily and imy · 6h</p></div></div> 
-                <div class="inbox-row"><img src="images/pfp/triya.jpg"><div class="inbox-sent"><h3>Triya</h3> <p>😻 · 2d</p></div></div> 
+                <div class="inbox-row"><img src="images/pfp/triya.jpg"><div class="inbox-sent"><h3>Triya</h3> <p><span>i miss u 😢</span> · 2d</p></div><i class="fa-solid fa-circle"></i></div> 
                 <div class="inbox-row"><img src="images/pfp/neila.jpg"><div class="inbox-sent"><h3>Neila</h3> <p>bref alors · 1w</p></div> </div>
-                <div class="inbox-row"><img src="images/pfp/zarah.jpg"><div class="inbox-sent"><h3>Zarah</h3> <p>Sent · 12w</p> </div></div>
+                <div class="inbox-row"><img src="images/pfp/zarah.jpg"><div class="inbox-sent"><h3>Zarah</h3> <p>Ur so lovely · 12w</p> </div></div>
                 <div class="inbox-row"><img src="images/pfp/dahlia.jpg"><div class="inbox-sent"><h3>dahlia</h3> <p>can't wait to see you nex... · 12w</p></div> </div>
-                <div class="inbox-row"><img src="images/pfp/danae.jpg"><div class="inbox-sent"><h3>danae</h3> <p>Sent · 14w</p></div> </div>
-                <div class="inbox-row"><img src="images/pfp/linh.jpg"><div class="inbox-sent"><h3>kwiki333</h3> <p>Kirkioulin · 16w</p></div></div>
+                <div class="inbox-row"><img src="images/pfp/danae.jpg"><div class="inbox-sent"><h3>danae</h3> <p><span>Reacted ❤ to your message</span> · 14w</p></div> <i class="fa-solid fa-circle"></i></div>
+                <div class="inbox-row"><img src="images/pfp/linh.jpg"><div class="inbox-sent"><h3>kwiki333</h3> <p><span>Kirikoulin</span> · 16w</p></div><i class="fa-solid fa-circle"></i></div>
                 <div class="inbox-row"><img src="images/pfp/linh.jpg"><div class="inbox-sent"><h3>user</h3> <p>Sent · 24w</p></div></div>
             </div>
+
+        </section>
+
+        <section class="no-chat">
+            <div class="chat-element">
+                <div><img src="images/messenger.png"></div>
+                <div><h3>Your messages</h3></div>
+                <div><p>Send private photos and messages to a friend or group</p></div>
+                <div><button>Send message</button></div>
+            </div>
+
 
         </section>
 
