modified:   explore.html 	new file:   images/create-post.png 	new file:   images/navbar/explore-unselected.png 	new file:   images/posts grid/bag.jpg 	new file:   images/posts grid/cat.jpg 	new file:   images/posts grid/fit.jpg 	new file:   images/posts grid/fit2.jpg 	new file:   images/posts grid/fit3.jpg 	new file:   images/posts grid/fit4.jpg 	new file:   images/posts grid/jacket.jpg 	new file:   images/posts grid/jacket2.jpg 	new file:   images/posts grid/shoe.jpg 	new file:   images/posts grid/shoe2.jpg 	new file:   images/posts grid/shoe3.jpg 	new file:   images/posts grid/shoes.jpg 	new file:   images/posts grid/skincare.jpg 	new file:   images/posts grid/snorlax.jpg 	new file:   images/posts grid/star.jpg 	new file:   images/posts grid/sweater.jpg 	new file:   images/posts grid/temple.jpg 	new file:   images/posts grid/wall.jpg 	modified:   index.html 	modified:   messages.html 	modified:   profile.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="side-bar2">
 
         <div class="logo">
-          <a href="instagram"> <img src="images/logo.png"> </a>
+          <a href="index.html"> <img src="images/logo.png"> </a>
         </div>
 
         <nav class="navbar">
@@ -26,7 +26,7 @@
 
                 <div class="search"><img class="icon" id="search" src="images/navbar/search.png"><a href="https://www.instagram.com/"><li class="dropdown-search">Search</li></a></div>
 
-                <div class="explore"><img class="icon" id="explore" src="images/navbar/explore.png"><a href="https://www.instagram.com/explore/"><li>Explore</li></a></div>
+                <div class="explore"><img class="icon" id="explore" src="images/navbar/explore.png"><a href="explore.html"><li>Explore</li></a></div>
                 <div class="reels"><img class="icon" id="reels" src="images/navbar/reels.png"><a href="https://www.instagram.com/reels/"><li>Reels</li></a></div>
                 <div class="messages"><img class="icon" id="messages" src="images/navbar/messages.png"><a href="messages.html"><li>Messages</li></a></div>
 
@@ -44,13 +44,13 @@
 
     <section class="main-content">
         <div class="stories">
-            <div class="story"><img src="images/story/rodela.png"></div><div class="story-user"><p>rodela</p></div>
-            <div class="story"><img src="images/story/catalina.png"></div><div class="story-user"><p>user28</p></div>
-            <div class="story"><img src="images/story/pepe.png"></div><div class="story-user"><p>user99</p></div>
-            <div class="story"><img src="images/story/rima.png"></div><div class="story-user"><p>user12</p></div>
-            <div class="story"><img src="images/story/neila.png"></div><div class="story-user"><p>user11</p></div>
-            <div class="story"><img src="images/story/dahlia.png"></div><div class="story-user"><p>user56</p></div>
-            <div class="story"><img src="images/story/atika.png"></div><div class="story-user"><p>user23</p></div>
+            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user53</p></div>
+            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user28</p></div>
+            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user99</p></div>
+            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user12</p></div>
+            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user11</p></div>
+            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user56</p></div>
+            <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user23</p></div>
             <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user55</p></div>
             <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user67</p></div>
             <div class="story"><img src="images/story/profile-story.png"></div><div class="story-user"><p>user22</p></div>
